# codehive

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
backend/: .dockerignore  Dockerfile  Makefile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/codehive/: cli.py  config.py  logging.py
backend/codehive/api/: app.py  deps.py  errors.py  ws.py
backend/codehive/api/routes/: agent.py  approvals.py  archetypes.py  async_dispatch.py  auth.py  checkpoints.py  error_tracking.py  events.py  github.py  github_repos.py  issues.py  knowledge.py  logs.py  members.py  notifications.py  orchestrator.py  project_flow.py  projects.py  providers.py  questions.py  questions_global.py  remote.py  replay.py  roles.py  search.py  sessions.py  spawn_config.py  system.py  tasks.py  team.py  transcript.py  tunnels.py  usage.py  webhooks.py  workspace.py
backend/codehive/api/schemas/: archetype.py  auth.py  checkpoint.py  diff.py  errors.py  event.py  github.py  issue.py  knowledge.py  logs.py  member.py  project.py  project_flow.py  push.py  question.py  remote.py  replay.py  role.py  search.py  session.py  task.py  team.py  transcript.py  tunnel.py  workspace.py
backend/codehive/archetypes/: __init__.py  code_maintenance.yaml  research.yaml  software_development.yaml  technical_operations.yaml
backend/codehive/clients/telegram/: __init__.py  bot.py  formatters.py  handlers.py  notifications.py
backend/codehive/clients/terminal/: api_client.py  app.py  code_app.py  ws_client.py
backend/codehive/clients/terminal/screens/: dashboard.py  project_detail.py  project_list.py  rescue.py  session.py
backend/codehive/clients/terminal/widgets/: chat.py  data_table.py  files.py  status_indicator.py  timeline.py  todo.py
backend/codehive/core/: agent_comm.py  approval.py  archetypes.py  auth.py  backlog_service.py  backup.py  checkpoint.py  compaction.py  context_files.py  engine_throttle.py  error_tracking.py  events.py  fcm.py  first_run.py  git_service.py  issues.py  jwt.py  knowledge.py  knowledge_analyzer.py  logs.py  modes.py  notifications.py  orchestrator_service.py  pending_questions.py  permissions.py  project.py  project_flow.py  redaction.py  remote.py  replay.py  roles.py  scheduler.py  search.py  session.py  spawn_config.py  subagent.py  task_queue.py  task_runner.py  team.py  transcript.py  (+4 more)
backend/codehive/db/: __init__.py  models.py  session.py  sync_columns.py
backend/codehive/db/migrations/: env.py
backend/codehive/db/migrations/versions/: 5ee984c421f1_initial.py  a1b2c3d4e5f6_add_github_config_to_projects.py  b2c3d4e5f6a7_add_remote_targets.py  c3d4e5f6a7b8_add_push_subscriptions.py  (+8 more)
backend/codehive/engine/: __init__.py  base.py  claude_code.py  claude_code_engine.py  claude_code_parser.py  codex.py  codex_cli_engine.py  codex_cli_parser.py  codex_cli_process.py  copilot_cli_engine.py  copilot_cli_parser.py  copilot_cli_process.py  gemini_cli_engine.py  gemini_cli_parser.py  gemini_cli_process.py  native.py  orchestrator.py  zai_engine.py
backend/codehive/engine/tools/: create_task.py  get_subsession_result.py  list_subsessions.py  query_agent.py  read_issue.py  send_to_agent.py  spawn_subagent.py  spawn_team_agent.py  write_issue_log.py
backend/codehive/execution/: __init__.py  diff.py  file_ops.py  git_ops.py  policy.py  sandbox.py  shell.py  ssh.py  tunnel.py
backend/codehive/integrations/github/: __init__.py  client.py  closer.py  commenter.py  importer.py  mapper.py  repos.py  solver.py  triggers.py  webhook.py
backend/codehive/roles/: __init__.py  bug_fixer.yaml  developer.yaml  product_manager.yaml  refactor_engineer.yaml  research_agent.yaml  tester.yaml
backend/tests/: conftest.py  test_agent_api.py  test_agent_comm.py  test_agent_roles_builtin.py  test_agent_task_binding.py  test_api.py  test_approvals.py  test_archetypes.py  test_archive_delete.py  test_async_dispatch.py  test_auth.py  test_auth_bypass.py  test_backup.py  test_bug120_create_session.py  test_checkpoints.py  test_ci_pipeline.py  test_claude_code_engine.py  test_claude_code_wrapper.py  test_cli.py  test_cli_commands.py  test_cli_dev.py  test_closer.py  test_code_app.py  test_code_app_backend_mode.py  test_code_backend_detection.py  test_code_project_resolution.py  test_code_session_resolution.py  test_codex_cli_engine.py  test_codex_engine.py  test_command_guardrails.py  test_compaction.py  test_compaction_config.py  test_config.py  test_context_files.py  test_copilot_cli_engine.py  test_cors.py  test_create_task_tool.py  test_cross_client_visibility.py  test_detachable_sessions.py  test_diffs.py  (+77 more)
backend/tests_integration/: __init__.py  conftest.py  test_claude_integration.py  test_codex_integration.py  test_copilot_integration.py  test_gemini_integration.py
(+796 files in other folders)
