[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codehive"
version = "0.0.1"
description = "Multi-platform autonomous coding agent with sub-agent orchestration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Alexey" },
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/codehive"
