[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codehive"
description = "Multi-platform autonomous coding agent with sub-agent orchestration"
readme = "../README.md"
license = {text = "WTFPL"}
requires-python = ">=3.10"
dynamic = ["version"]

dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    # Add runtime dependencies here
    "fastapi>=0.135.1",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.41.0",
]

authors = [
    {name = "Alexey"},
]

keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
codehive = "codehive.cli:main"

[dependency-groups]
dev = [
    "hatch",
    "httpx>=0.28.1",
    "pytest",
    "pytest-asyncio>=1.3.0",
    "pytest-cov",
    "pyyaml>=6.0.3",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["codehive"]

[tool.hatch.version]
path = "codehive/__version__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
