[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codehive"
description = "Multi-platform autonomous coding agent with sub-agent orchestration"
readme = "../README.md"
license = {text = "WTFPL"}
requires-python = ">=3.10"
dynamic = ["version"]

dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "anthropic>=0.84.0",
    "asyncpg>=0.31.0",
    "asyncssh>=2.22.0",
    "fastapi>=0.135.1",
    "firebase-admin>=7.2.0",
    "httpx>=0.28.1",
    "openai>=2.29.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.13.1",
    "python-jose[cryptography]>=3.5.0",
    "python-telegram-bot>=22.6",
    "pywebpush>=2.3.0",
    "pyyaml>=6.0",
    "redis>=7.3.0",
    "sqlalchemy[asyncio]>=2.0",
    "textual>=8.1.1",
    "uvicorn[standard]>=0.41.0",
]

authors = [
    {name = "Alexey"},
]

keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
codehive = "codehive.cli:main"

[dependency-groups]
dev = [
    "hatch",
    "httpx>=0.28.1",
    "pytest",
    "pytest-asyncio>=1.3.0",
    "pytest-cov",
    "pytest-textual-snapshot>=1.0.0",
    "pytest-timeout>=2.4.0",
    "pyyaml>=6.0.3",
    "ruff",
    "textual-dev>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["codehive"]

[tool.hatch.version]
path = "codehive/__version__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.uv]
exclude-newer = "7 days"
